
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int tv_usec; scalar_t__ tv_sec; } ;
typedef TYPE_1__ timeval ;
typedef int fd_set ;
typedef int buffer ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 scalar_t__ SOCKET_ERROR ;
 int ZeroMemory (char*,int) ;
 int exit (int ) ;
 int fgets (char*,int,int ) ;
 int fwrite (char*,int,int,int ) ;
 scalar_t__ kbhit () ;
 int printf (char*) ;
 int recv (int,char*,int,int ) ;
 scalar_t__ select (int ,int *,int *,int *,TYPE_1__*) ;
 int send (int,char*,int ,int ) ;
 int stdin ;
 int stdout ;
 int strlen (char*) ;

void shell(int sockfd)
{
char buffer[1024];
fd_set rset;
FD_ZERO(&rset);

for(;;)
{
if(kbhit() != 0)
{
fgets(buffer, sizeof(buffer) - 2, stdin);
send(sockfd, buffer, strlen(buffer), 0);
}

FD_ZERO(&rset);
FD_SET(sockfd, &rset);

timeval tv;
tv.tv_sec = 0;
tv.tv_usec = 50;

if(select(0, &rset, ((void*)0), ((void*)0), &tv) == SOCKET_ERROR)
{
printf("select errorn");
break;
}

if(FD_ISSET(sockfd, &rset))
{
int n;

ZeroMemory(buffer, sizeof(buffer));
if((n = recv(sockfd, buffer, sizeof(buffer), 0)) <= 0)
{
printf("EOFn");
exit(0);
}
else
{
fwrite(buffer, 1, n, stdout);
}
}
}
}
